<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_activity_tvTitle"
        android:layout_width="111dp"
        android:layout_height="44dp"
        android:text="@string/login_activity_tvTitle"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184" />



    <EditText
        android:id="@+id/login_activity_etUsername"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/login_activity_etUsername_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/login_activity_tvUsername"
        app:layout_constraintTop_toBottomOf="@+id/login_activity_tvTitle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/login_activity_tvUsername"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/login_activity_tvUsername"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_activity_tvTitle"
        app:layout_constraintVertical_bias="0.015" />

    <TextView
        android:id="@+id/login_activity_tvPassword"
        android:layout_width="99dp"
        android:layout_height="67dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_activity_tvPassword"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_activity_tvUsername"
        app:layout_constraintVertical_bias="0.042" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_activity_btnSubmit"
        android:layout_width="109dp"
        android:layout_height="52dp"
        android:text="@string/login_activity_btnSubmit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword"
        app:layout_constraintVertical_bias="0.335" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/login_activity_tvPassword"
        app:layout_constraintTop_toBottomOf="@+id/login_activity_etUsername"
        app:layout_constraintVertical_bias="0.02"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/login_activity_etPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            android:ems="10"
            android:hint="@string/login_activity_etPassword_hint"
            android:inputType="textPassword"
            android:password="true"
            app:passwordToggleEnabled="true" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>